src/objects/Buyer_Roles__c.object
<CustomObject>
    <fields>
        <fullName>Biases_Hot_Button__c</fullName>
        <label>Biases/Hot Button</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CompetitiveStatus__c</fullName>
        <label>Competitive Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>C-</fullName>
                </value>
                <value>
                    <fullName>C=</fullName>
                </value>
                <value>
                    <fullName>C+</fullName>
                </value>
                <value>
                    <fullName>VOC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Decision_Criteria__c</fullName>
        <label>Decision Criteria</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>New_People_Roles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Person__c</fullName>
        <label>Person</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>New_People_Roles</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Power__c</fullName>
        <label>Power</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Power (0)</fullName>
                </value>
                <value>
                    <fullName>Very Little Power (1)</fullName>
                </value>
                <value>
                    <fullName>May Not Be Heard (2)</fullName>
                </value>
                <value>
                    <fullName>Makes Recommendations (3)</fullName>
                </value>
                <value>
                    <fullName>Usually Gets What S/He Wants (4)</fullName>
                </value>
                <value>
                    <fullName>Gets Job Done – Political (5)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferences__c</fullName>
        <label>Preferences</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Huge Fan of TTS</fullName>
                </value>
                <value>
                    <fullName>Strongly Supports TTS</fullName>
                </value>
                <value>
                    <fullName>Outspoken in favor of TTS</fullName>
                </value>
                <value>
                    <fullName>Likes TTS</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Dislikes TTS</fullName>
                </value>
                <value>
                    <fullName>Outspoken against TTS</fullName>
                </value>
                <value>
                    <fullName>Strongly Opposed to TTS</fullName>
                </value>
                <value>
                    <fullName>Hostile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Champion</fullName>
                </value>
                <value>
                    <fullName>Coach</fullName>
                </value>
                <value>
                    <fullName>Ultimate Decision Maker</fullName>
                </value>
                <value>
                    <fullName>Evaluation Committee Member</fullName>
                </value>
                <value>
                    <fullName>Everyday User</fullName>
                </value>
                <value>
                    <fullName>Gate Keeper</fullName>
                </value>
                <value>
                    <fullName>Influencer</fullName>
                </value>
                <value>
                    <fullName>Inside Coach</fullName>
                </value>
                <value>
                    <fullName>Introduction Maker</fullName>
                </value>
                <value>
                    <fullName>Not Involved</fullName>
                </value>
                <value>
                    <fullName>Obstructionist</fullName>
                </value>
                <value>
                    <fullName>Participant</fullName>
                </value>
                <value>
                    <fullName>Political Influencer</fullName>
                </value>
                <value>
                    <fullName>Recommender</fullName>
                </value>
                <value>
                    <fullName>Responsible for Money</fullName>
                </value>
                <value>
                    <fullName>Signature on Agreement</fullName>
                </value>
                <value>
                    <fullName>Technical Evaluator</fullName>
                </value>
                <value>
                    <fullName>Decision Maker</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Buyer Roles</label>
    <nameField>
        <displayFormat>PR-{00000}</displayFormat>
        <label>Role ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Buyer Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>